--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -1,71 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lock_screen_constrain_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:background="@drawable/image_background"
     tools:context="pipi.win.a2048.activity.LockScreenActivity">
+    <View
+        android:id="@+id/lock_screen_view_touch_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/lock_screen_constrain_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/image_background">
 
-    <com.andrognito.patternlockview.PatternLockView
-        android:id="@+id/pattern_lock_view"
-        android:layout_width="@dimen/lock_screen_input_zone_size"
-        android:layout_height="@dimen/lock_screen_input_zone_size"
-        android:layout_marginBottom="64dp"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <TextView
-        android:id="@+id/tv_title_screenlock"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="手势解锁"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
-        android:orientation="vertical"
-
-        android:layout_marginTop="80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_title_screenlock">
 
         <com.andrognito.patternlockview.PatternLockView
+            android:id="@+id/pattern_lock_view"
+            android:layout_width="@dimen/lock_screen_input_zone_size"
+            android:layout_height="@dimen/lock_screen_input_zone_size"
+            android:layout_marginBottom="64dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
 
-            android:id="@+id/pattern_lock_view_display"
-            android:layout_width="@dimen/lock_screen_show_zone_size"
-            android:layout_height="@dimen/lock_screen_show_zone_size"
-            app:correctStateColor="@color/colorPrimary" />
-
-        <pipi.win.a2048.view.CorrectHintImageView
-            android:id="@+id/pattern_lock_inputzone_checkres"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            android:scaleType="fitCenter"
-            android:visibility="visible"
-            app:srcCompat="@drawable/ic_done_black_24dp" />
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tv_title_screenlock"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="手势解锁"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="120dp"
+            android:orientation="vertical"
+
+            android:layout_marginTop="80dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_title_screenlock">
+
+            <com.andrognito.patternlockview.PatternLockView
+
+                android:id="@+id/pattern_lock_view_display"
+                android:layout_width="@dimen/lock_screen_show_zone_size"
+                android:layout_height="@dimen/lock_screen_show_zone_size"
+                app:correctStateColor="@color/colorPrimary" />
+
+            <pipi.win.a2048.view.CorrectHintImageView
+                android:id="@+id/pattern_lock_inputzone_checkres"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:scaleType="fitCenter"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_done_black_24dp" />
+        </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+
+
+
+
+
+</FrameLayout>
+
 
     <!--
 transparent: https://www.jianshu.com/p/be6aecb02701
