--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="gray">#757575</color>
+    
+    <color name="white">#FFFF</color>
+    <color name="pomegranate">#f4511e</color>
 </resources>
