--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="pipi.win.a2048.activity.LockScreenActivity">
+
     <View
         android:id="@+id/lock_screen_view_touch_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clickable="true" />
 
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
