--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,19 @@
                 android:layout_marginTop="20dp"
                 android:text="Sign in"
                 android:textStyle="bold" />
+
+            <ImageButton
+
+                android:id="@+id/imgbt_login_act_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_settings_black_24dp"
+                android:visibility="visible" />
         </LinearLayout>
+
     </ScrollView>
+
+
 
 </LinearLayout>
