--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -36,9 +36,10 @@
             android:id="@+id/tv_title_screenlock"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="手势解锁"
+            android:layout_marginTop="32dp"
+            android:text="Gesture Unlock"
             android:textAlignment="center"
+            android:textColor="?android:attr/colorForeground"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -49,12 +50,12 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="120dp"
-            android:orientation="vertical"
 
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="96dp"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_title_screenlock">
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.andrognito.patternlockview.PatternLockView
 
@@ -69,7 +70,7 @@
                 android:layout_height="match_parent"
 
                 android:scaleType="fitCenter"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:srcCompat="@drawable/ic_done_black_24dp" />
         </LinearLayout>
 
